# agentops-starter-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_research_agent.py
src/agentops_starter/: __init__.py  agent.py  cli.py  coding_agent.py  coding_tools.py  evals.py  models.py  scaffold.py  telemetry.py  tools.py
tests/: test_agent.py  test_coding_agent.py  test_coding_tools.py  test_evals.py  test_ollama_parsing.py  test_ollama_provider.py  test_scaffold.py  test_tools.py
