[project]
name = "agentops-starter-kit"
version = "0.1.0"
description = "A production-minded starter kit for observable, testable AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentOps Starter Kit contributors" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
agentops-demo = "agentops_starter.cli:main"
agentops = "agentops_starter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentops_starter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
